@startuml
skinparam monochrome true
skinparam handwritten true

class Parameter
Parameter : +name:String
Parameter : +properties:Map<String, String>

class User
User : +email:String
User : +password:String
User : +first_name:String
User : +last_name:String
User : +par_values:Map<String, Map<String, String>>
User "1..*" - "*" Lesson
(User , Lesson) .. Follow
User "1" - "*" Lesson
(User , Lesson) .. Teach
User "*" o--> "*" LessonModel : models
User "1" *--> "*" Parameter : par_types

class Follow
Follow : +interests:Set<String>

class Teach

class Lesson
Lesson : +name:String
Lesson "*" o--> "1" LessonModel : model
Lesson "1" *--> "*" Stimulus : stimuli
Lesson "1" *--> "*" Token : tokens

class LessonModel
LessonModel : +id:Long
LessonModel : +name:String
LessonModel : +ids:Set<String>
LessonModel "1" *--> "*" StimulusTemplate : stimuli
LessonModel "1" *--> "*" Relation : relations

class Message

class NewParameter
Message <|-- NewParameter
NewParameter *--> Relation : parameter

class RemoveParameter
Message <|-- RemoveParameter
RemoveParameter : +parameter:String

class FollowLesson
Message <|-- FollowLesson
FollowLesson : +lesson:long
FollowLesson : +interests:Set<String>
FollowLesson *--> User : student

class UnfollowLesson
Message <|-- UnfollowLesson
UnfollowLesson : +student:long
UnfollowLesson : +lesson:long

class Stimulus
note bottom: Created at execution time
Message <|-- Stimulus
Stimulus : +lesson_id:long
Stimulus : +id:int
Stimulus : +students:Collection<Long>
Stimulus : +time:long

class TextStimulus
Stimulus <|-- TextStimulus

class QuestionStimulus
Stimulus <|-- QuestionStimulus

class URLStimulus
Stimulus <|-- URLStimulus

class Token
note bottom: Created at planning time
Message <|-- Token
Token : +lesson_id:long
Token : +id:int
Token : +cause:Integer
Token : +min:Long
Token : +max:Long
Token : +time:long
Token : +refEvent:String
Token : +question:Integer

class StimulusTemplate
StimulusTemplate : +name:String
StimulusTemplate : +topics:Set<String>
StimulusTemplate : +ids:Set<String>
StimulusTemplate "1" *--> "0..1" Condition : trigger_condition
StimulusTemplate "1" *--> "0..1" Condition : execution_condition
StimulusTemplate "1" *--> "*" Relation : relations

class TextStimulusTemplate
StimulusTemplate <|-- TextStimulusTemplate

class QuestionStimulusTemplate
StimulusTemplate <|-- QuestionStimulusTemplate

class URLStimulusTemplate
StimulusTemplate <|-- URLStimulusTemplate

class Condition

class AndCondition
Condition <|-- AndCondition
AndCondition "1" *--> "2..*" Condition : conditions

class OrCondition
Condition <|-- OrCondition
OrCondition "1" *--> "2..*" Condition : conditions

class NotCondition
Condition <|-- NotCondition
NotCondition "1" *--> "1" Condition : condition

class NominalCondition
Condition <|-- NominalCondition
NominalCondition : +variable:String
NominalCondition : +value:String

class NumericCondition
Condition <|-- NumericCondition
NumericCondition : +numeric_condition_type:NumericConditionType
NumericCondition : +variable:String
NumericCondition : +value:double

class Relation
Relation : +from:String
Relation : +to:String
Relation : +lb:Long
Relation : +ub:Long
Relation : +unit:TimeUnit

@enduml
